--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@ Articles des MMIA1
     <!-- PARTIE DE Camille -->
 	<div id="news">
 		<h2>
-			News INSERER_NOM !!
+			News Camille!!
 		</h2>
 		<p>
-			Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+			Salut à tous, bienvenu sur ma chaîne, aujourd'hui on se retrouve pour une nouvelle vidéo, avant toute chose n'oubliez pas de vous abonner et de mettre un petit like et un commentaire sa fait toujours plaisir !
 		</p>
 		<h3>Source : <a href="#">blabla</a>
 		</h3>
